feat: add documentation for all the user's handlers
